--- a/Day1/hello-world.html
+++ b/Day1/hello-world.html
@@ -24,13 +24,13 @@
     // 通过data提供渲染数据
     data: {
       msg: "Hello Vue!",
-      age: '19',
+      age: "19",
       user: {
         username: "admin",
         password: "admin",
         // 修改数据: 实例.属性 = 新值
-        change: "change"
-      }
+        change: "change",
+      },
     },
   });
 </script>
