--- a/Day2/05-v-bind对于样式style的控制.html
+++ b/Day2/05-v-bind对于样式style的控制.html
@@ -13,11 +13,15 @@
     }
   </style>
 </head>
+<!-- 操作style -->
 <body>
   <div id="app">
-    <div class="box"></div>
+    原
+    <div class="box"></div><hr>
+    操作后
+    <div class="box" :style="{ width: '400px',height: '400px','background-color':'green'}"></div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
   <script>
     const app = new Vue({
       el: '#app',
