--- a/Day1/案例_记事本.html
+++ b/Day1/案例_记事本.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
     <title>记事本</title>
   </head>
   <body>
@@ -13,9 +14,11 @@
       <!-- 输入框 -->
       <header class="header">
         <h1>记事本</h1>
+        <!-- 注册一个键盘点击事件 @keyup.enter="add" -->
         <input
           placeholder="请输入任务"
           class="new-todo"
+          @keyup.enter="add"
           v-model="addDescrible"
         />
         <button class="add" @click="add">添加任务</button>
@@ -41,7 +44,6 @@
       </footer>
     </section>
     <!-- 底部 -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
     <script>
       const app = new Vue({
         el: "#app",
