--- a/Day2/03-v-bind对于样式class的控制.html
+++ b/Day2/03-v-bind对于样式class的控制.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    .box {
-      width: 200px;
-      height: 200px;
-      border: 3px solid #000;
-      font-size: 30px;
-      margin-top: 10px;
-    }
-    .pink {
-      background-color: pink;
-    }
-    .big {
-      width: 300px;
-      height: 300px;
-    }
-  </style>
-</head>
-<body>
-
-  <div id="app">
-    <div class="box">黑马程序员</div>
-    <div class="box">黑马程序员</div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      .box {
+        width: 200px;
+        height: 200px;
+        border: 3px solid #000;
+        font-size: 30px;
+        margin-top: 10px;
       }
-    })
-  </script>
-</body>
+      .pink {
+        background-color: pink;
+      }
+      .big {
+        width: 300px;
+        height: 300px;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="app">
+      <!-- v-bind   即简写 : -->
+      <!-- 通过v-bind绑定class属性 -->
+      <!-- :class="{ 属性:布尔值 }" -->
+      <div class="box" :class="{ pink: true, big: false}">黑马程序员</div>
+      <div class="box" :class="{ pink: false, big: true}">黑马程序员</div>
+      <!-- 数组形式 -->
+      <div class="box" :class="['pink','big']">黑马程序员</div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {},
+      });
+    </script>
+  </body>
 </html>
