day2完结,watch和数据持久化,以及前面的总结

--- a/Day2/12-watch侦听器.html
+++ b/Day2/12-watch侦听器.html
@@ -74,7 +74,7 @@
       <!-- 条件选择框 -->
       <div class="query">
         <span>翻译成的语言：</span>
-        <select v-model="transLang">
+        <select v-model="obj.transLang">
           <option value="italy">意大利</option>
           <option value="english">英语</option>
           <option value="german">德语</option>
@@ -92,7 +92,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
       // 接口地址：https://applet-base-api-t.itheima.net/api/translate
       // 请求方式：get
@@ -103,12 +103,14 @@
       const app = new Vue({
         el: "#app",
         data: {
-          transLang: "italy",
+          // transLang: "italy",
           // words: "",
           // 例如 还有一级目录
           obj: {
             test1: "",
             test2: "",
+
+            transLang: "italy",
             words: "",
           },
           transWords: "",
@@ -122,12 +124,35 @@
           words(newValue) {
             console.log(newValue);
           },
+          /*
+              完整监视
+          */
+          obj: {
+            deep: true, // 对象中的所有属性都可以监视到
+            immediate: true, // 立刻执行,假如有默认值的时候
+            handler(newValue) {
+              // 防抖: 延迟执行(如果不加延时,那么每次输入一个,他都会进行请求,对后台服务器不友好)
+              // 如果有动作(输入) 那么清空之前的延时,如果设置的时间内没有变化请求,则会执行下面的方法
+              clearTimeout(this.timer);
+              // 设置延时器,如果不设置,那么则会延时后,之前的请求都会执行
+              // this.timer不需要写到data里,直接写在这,相当于挂载对象,跟页面渲染无关的,直接在对象上面进行绑定
+              this.timer = setTimeout(async () => {
+                const res = await axios({
+                  // 翻译url
+                  url: "https://applet-base-api-t.itheima.net/api/translate",
+                  params: newValue
+                });
+                this.transWords = res.data.data;
+              }, 300); // 设置延时
+            },
+          },
+          /*  简写监视
           // 如果我需要监视data的下一级的数据(子属性)访问路径
           // 一开始 async 在没加延时的时候,是在最前面的
           "obj.words"(newValue) {
             // 防抖: 延迟执行(如果不加延时,那么每次输入一个,他都会进行请求,对后台服务器不友好)
             // 如果有动作(输入) 那么清空之前的延时,如果设置的时间内没有变化请求,则会执行下面的方法
-            clearTimeout(this.timer)
+            clearTimeout(this.timer);
             // 设置延时器,如果不设置,那么则会延时后,之前的请求都会执行
             // this.timer不需要写到data里,直接写在这,相当于挂载对象,跟页面渲染无关的,直接在对象上面进行绑定
             this.timer = setTimeout(async () => {
@@ -145,6 +170,7 @@
               }
             }, 1000); // 设置延时
           },
+          */
         },
       });
     </script>
