echarts绘制饼图,练习使用axios请求调用api接口

--- a/Day3/01-生命周期-四大阶段-八个钩子.html
+++ b/Day3/01-生命周期-四大阶段-八个钩子.html
@@ -1,33 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-
-<body>
-
-  <div id="app">
-    <h3>{{ title }}</h3>
-    <div>
-      <button @click="count--">-</button>
-      <span>{{ count }}</span>
-      <button @click="count++">+</button>
+  <body>
+    <div id="app">
+      <h3>{{ title }}</h3>
+      <div>
+        <button @click="count--">-</button>
+        <span>{{ count }}</span>
+        <button @click="count++">+</button>
+      </div>
     </div>
-  </div>
-  <script src="./vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        count: 100,
-        title: '计数器'
-      }
-    })
-  </script>
-</body>
+    <script src="./vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          count: 100,
+          title: "计数器",
+        },
+        // 1.创建阶段（准备数据）
+        beforeCreate() {
+          // 这个时候访问数据，都是不合理的
+          console.log("beforeCreate 响应式数据准备之前",this.count)
+        },
+        created() {
+          // 数据准备好了
+          // 可以开始发送初始化渲染的请求了
+          console.log("created 响应式数据准备之后",this.count)
+        },
+        // 2.挂载阶段（渲染数据）
+        beforeMount() {
+          console.log("beforeMoun 模板渲染之前",document.querySelector('h3').innerHTML)
+        },
+        // 可以开始操作dom
+        mounted() {
+          console.log("mounted 模板渲染之后",document.querySelector('h3').innerHTML)
+        },
+        /*用的比较少*/
+        // 3.更新阶段(修改数据的时候触发)
+        beforeUpdate() {
+          console.log("beforeUpdate 数据修改了,视图还没更新",document.querySelector('span').innerHTML)
+        },
+        updated() {
+          console.log("updated 数据修改了,视图以及更新",document.querySelector('span').innerHTML)
+        },
 
+        // 4.卸载阶段
+        beforeDestroy() {
+          console.log("beforeDestroy")
+          // 通常(语句)
+          console.log("清除掉一些Vue以外的资源占用,定时器,延时器...")
+        },
+        destroyed() {
+          console.log("destroyed")
+        },
+      });
+    </script>
+  </body>
 </html>
